--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     </form>
 
     <div class="gallery"></div>
-   
+    <button type="button" class="load-more">Load more</button>
     <script src="./index.js"></script>
   </body>
 </html>
